fix some warn